@@ -36,6 +36,7 @@ Release 0.8.5
 - removed deprecated method ZMTheme::includeStaticPageContent(..)
 - added new setting 'isZMDefinePages' that will make the code look in the
   themes folder for define pages (example: lang/english/static/main_page.php)
+- fix some typos in ZMRssItem
 
 Release 0.8.4
 - make gv_send form secure
